# deaddrop

./: Cargo.toml  todo.md
src/: api.rs  db.rs  lib.rs  main.rs  templates.rs
templates/: bad_request.html  base.html  index.html  message.html  not_found.html
