[package]
name = "deaddrop"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["tokio", "form", "query"] }
serde = { version = "1.0.215", features = ["derive", "std"] }
sha2 = "0.10.8"
sled = "0.34.7"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
